<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="update_failed">"Updating build status failed: %1s"</string>
    <string name="status_icon">Status icon</string>
    <string name="action_open">Open App Details</string>
    <string name="action_search">Search App</string>
    <string name="favourite_icon">Favourite indicator</string>
    <string name="action_refresh">Refresh</string>
    <string name="search_hint">Search apps</string>
    <string name="new_build_notification">New F-Droid build available</string>
    <string name="new_build_notification_fav_names">New F-Droid build of: %s</string>
    <string name="new_build_notification_favs">New F-Droid build of %d favourite apps</string>
    <string name="channel_name">General</string>
    <string name="channel_description">F-Droid build status notification channel</string>
    <string name="action_about">About</string>
    <string name="about_version">Version:</string>
    <string name="about_info">This App reads the <b><a href="https://f-droid.org">F-Droid</a></b> build status from the <b><a href="https://f-droid.org/repo/status/build.json">Finished</a></b> and/or <b><a href="https://f-droid.org/repo/status/running.json">Running</a></b> build cycles.<br />
        It is licensed under <b><a href="http://choosealicense.com/licenses/mit/">MIT-License</a></b>.<br />
        App development and Issues on Codeberg: <b><a href="https://codeberg.org/pstorch/F-Droid_Build_Status">pstorch/F-Droid_Build_Status</a></b>.
    </string>
    <string name="about_last_update_build_label">Last update build.json:</string>
    <string name="about_last_update_running_label">Last update running.json:</string>
    <string name="app_info_title">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="not_found_build_item_name">App not found</string>
    <string name="add_not_found_app_as_favourite">App by id \"%s\" not found. Are you sure you want to add it as favourite?</string>
    <string name="title_activity_details">Build Details</string>
    <string name="build_check_type">Build cycle type to check in background</string>

    <!-- Preferences -->
    <string name="general_settings_category_title">General settings</string>

    <string name="update_background_check_category_title">Background check</string>
    <string name="update_check_title">Check build status periodically</string>
    <string name="update_interval_title">Update interval</string>
    <string name="notify_favourites_title">Notify favourites only</string>
    <string name="notify_favourites_summary_off">Notify all build status updates</string>
    <string name="notify_favourites_summary_on">Notify only build status updates of favourite apps</string>

    <string name="update_interval_1_hour">1 hour</string>
    <string name="update_interval_2_hours">2 hours</string>
    <string name="update_interval_5_hours">5 hours</string>
    <string name="update_interval_12_hours">12 hours</string>
    <string name="update_interval_24_hours">24 hours</string>
    <string name="update_interval_48_hours">48 hours</string>
    <string name="build_status_head_finished">finished</string>
    <string name="build_status_head_running">running</string>
    <string name="build_status_start">Start:</string>
    <string name="build_status_end">End:</string>
    <string name="build_status_last_modified">Modified:</string>
    <string name="build_status_successful">Successful:</string>
    <string name="build_status_failed">Failed:</string>
    <string name="published_versions">Published versions:</string>
    <string name="published_versions_unknown">Published versions: ?</string>
    <string name="published_versions_none">Published versions: not found</string>
    <string name="metadata_version">Highest metadata version:\n· %s</string>
    <string name="metadata_version_unknown">Highest metadata version: ?</string>
    <string name="metadata_version_none">Highest metadata version: not found</string>
    <string name="loading_published_versions_failed">Couldn\'t load published versions from F-Droid: %s</string>
    <string name="loading_metadata_versions_failed">Couldn\'t load metadata versions from Gitlab: %s</string>
    <string name="loading_build_log_failed">Loading build log failed: %s</string>
    <string name="action_metadata">Metadata</string>
    <string name="action_source">Sourcecode</string>

    <string name="build_run_type_finished">Finished builds (build.json)</string>
    <string name="build_run_type_running">Running builds (running.json)</string>
    <string name="build_run_type_update">Update (update.json)</string>
    <string name="build_run_type_merged">Merge both (build and running.json)</string>
    <string name="load_update_failed">Failed to load update.json: %s</string>
    <string name="disabled_icon">App is disabled</string>
    <string name="needs_update_icon">App needs update</string>
    <string name="build_log">Buildlog:</string>
    <string name="load_index_failed">Loading repo index failed: %s</string>
    <string name="load_index_success">Loaded %d apps from repository index.</string>
    <string name="load_index_question">To improve search results and app display names, you can download the F-Droid repo index (> 5MB). This can be done later via the menu.</string>
    <string name="not_now">Not now</string>
    <string name="download">Download</string>
    <string name="action_load_index">Download repo index</string>
    <string name="max_log_lines_to_load">Maximum number of loglines</string>

    <string name="ic_check_24px_label">Successful build</string>
    <string name="ic_error_outline_24px_label">Failed build, incomplete build cycle</string>
    <string name="ic_questionmark_outline_24px_label">Missing build</string>
    <string name="ic_directions_run_24px_label">Running cycle</string>
    <string name="ic_build_24_label">Build cycle</string>
    <string name="ic_star_24px_label">Favorite app</string>
    <string name="ic_star_border_24px_label">No favorite app</string>
    <string name="ic_share_black_24dp_label">Open app in F-Droid</string>
    <string name="ic_source_24px_label">Open build metadata</string>
    <string name="ic_code_24px_label">Open source repo</string>
    <string name="ic_disabled_by_default_black_24dp_label">Disabled app</string>
    <string name="ic_upgrade_black_24dp_label">App needs update / update cycle</string>
    <string name="ic_archive_24_label">Archived app</string>
    <string name="ic_no_packages_24_label">App has no apks</string>
    <string name="ic_no_update_check_24_label">Update check is disabled for this app</string>
    <string name="legend_title">Legend</string>
    <string name="action_legend">Legend</string>
    <string name="metadata_link_type">Metadata link</string>
    <string name="metadata_link_always">Always</string>
    <string name="metadata_link_ask">Always ask</string>
    <string name="metadata_link_yaml">Open raw yaml file</string>
    <string name="metadata_link_gitlab">Open Gitlab page</string>
    <string name="buildlog_type_log">Download as .log file</string>
    <string name="buildlog_type_gz">Download as .log.gz file</string>
    <string name="buildlog_type_ask">Always ask</string>
    <string name="buildlog_type_always">Always</string>
    <string name="buildlog_type">Buildlog type</string>
    <string name="error_crash_title">%1$s crashed</string>
    <string name="share">Share</string>
    <string name="bug_report">Report bug</string>

    <string name="bottom_bar_running">running</string>
    <string name="bottom_bar_build">build</string>
    <string name="bottom_bar_success">success</string>
    <string name="bottom_bar_failed">failed</string>
    <string name="bottom_bar_favorite">favorite</string>
    <string name="build_log_not_found">Build log not found</string>
    <string name="build_status_head_running_command">running %s</string>
    <string name="build_status_head_finished_command">finished %s</string>
    <string name="build_cycle">build cycle</string>
    <string name="status_filter">status</string>
    <string name="clear_filter">clear filter</string>
    <string name="build_cycle_all">all cycles</string>
    <string name="build_status_all">all states</string>
    <string name="notification_permission_needed">Notification permission is needed to enable the background check.</string>
    <string name="action_website_build_status">Website build status</string>
    <string name="website_build_status_info">Current status of the website deployment.</string>
    <string name="website_build_status_start_label">Start timestamp:</string>
    <string name="website_build_status_end_label">End timestamp:</string>
    <string name="website_build_status_running">currently running</string>
    <string name="load_website_build_status_failed">Loading Website build status failed: %s</string>
    <string name="website_build_status_loading">loading…</string>
    <string name="title_activity_buildlog">Buildog</string>
    <string name="action_download_buildlog">Download buildlog</string>
    <string name="buildlog_title">Buildlog: %s</string>
    <string name="bottom_bar_missing">missing</string>
    <string name="bottom_bar_archived">archived</string>
    <string name="bottom_bar_needs_update">needs update</string>
    <string name="bottom_bar_no_packages">no packages</string>
    <string name="bottom_bar_no_update_check">no update check</string>
    <string name="bottom_bar_disabled">disabled</string>
    <string name="archived_icon">App is archived</string>
    <string name="no_packages_icon">App has no apks</string>
    <string name="no_update_check_icon">App has update check set to none</string>
    <string name="bottom_bar_update">update</string>
    <string name="build_status_head_update">update</string>
    <string name="build_status_head_build_command">build</string>
    <string name="build_status_builds">Builds:</string>
    <string name="settings_night_mode_title">UI Theme</string>
    <string name="settings_night_mode_option_system">System</string>
    <string name="settings_night_mode_option_day">Day</string>
    <string name="settings_night_mode_option_night">Night</string>

</resources>