<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.storchp.fdroidbuildstatus.MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_24px"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:iconifiedByDefault="true"
        />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_24px"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_load_index"
        android:orderInCategory="100"
        android:title="@string/action_load_index"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_website_build_status"
        android:orderInCategory="100"
        android:title="@string/action_website_build_status"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_legend"
        android:orderInCategory="100"
        android:title="@string/action_legend"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>