<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.storchp.fdroidbuildstatus.DetailActivity">
    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/action_open"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_metadata"
        android:orderInCategory="100"
        android:title="@string/action_metadata"
        android:icon="@drawable/ic_source_24px"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_source"
        android:orderInCategory="100"
        android:title="@string/action_source"
        android:icon="@drawable/ic_code_24px"
        app:showAsAction="ifRoom" />
</menu>