<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.storchp.fdroidbuildstatus.MainActivity">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/favouriteIcon"
        android:src="@drawable/ic_no_favourite_24px"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/favourite_icon" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/disabledIcon"
        android:src="@drawable/ic_disabled_24dp"
        android:visibility="gone"
        android:layout_toStartOf="@id/favouriteIcon"
        android:contentDescription="@string/disabled_icon" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/needsUpdateIcon"
        android:src="@drawable/ic_build_24"
        android:visibility="gone"
        android:layout_toStartOf="@id/disabledIcon"
        android:contentDescription="@string/needs_update_icon" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/archivedIcon"
        android:src="@drawable/ic_archive_24"
        android:visibility="gone"
        android:layout_toStartOf="@id/needsUpdateIcon"
        android:contentDescription="@string/archived_icon" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/noPackagesIcon"
        android:src="@drawable/ic_no_packages_24"
        android:visibility="gone"
        android:layout_toStartOf="@id/archivedIcon"
        android:contentDescription="@string/no_packages_icon" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/noUpdateCheckIcon"
        android:src="@drawable/ic_no_update_check_24"
        android:visibility="gone"
        android:layout_toStartOf="@id/noPackagesIcon"
        android:contentDescription="@string/no_update_check_icon" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/noUpdateCheckIcon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/app_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/app_name"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/favouriteIcon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_builds"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_id"
        android:orientation="vertical" />

</RelativeLayout>


